# openai-game-translator

./: .bumpversion.cfg  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  Development.html  Examples.html  Functions.html  Getting Started.html  MANIFEST.in  Makefile  README.md  game_translator.py  genindex.html  index.html  lint.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: build.yml  docs.yml  pylint.yml  python-app.yml  test_and_coverage.yml
_sources/: Examples.md.txt  Functions.md.txt  Getting Started.md.txt  index.md.txt
audio/: record.py
aws_streaming_transcription/: live_stream.py  prerecorded_stream.py
docs/: Development.md  Examples.md  Getting Started.md  conf.py  requirements.txt
game_translator/: __init__.py  __main__.py  game_translator.py
game_translator/audio/: __init__.py  record.py
game_translator/aws_streaming_transcription/: live_stream.py  prerecorded_stream.py  settings.py
game_translator/openai_translation/: __init__.py  chat.py
game_translator/tests/: .coveragerc  test_aws_live.py  test_aws_pre.py  test_game_translator.py  test_openai.py  test_record.py  test_xunfei.py
game_translator/xunfei_speed_transcription/: __init__.py  ost_fast.py  seve_file.py
openai_translation/: chat.py
test/: test_all.py  test_aws_live.py  test_aws_pre.py  test_game_translator.py  test_openai.py  test_output.txt  test_record.py  test_xunfei.py
tests/: .coveragerc  test_all.py  test_aws_live.py  test_aws_pre.py  test_game_translator.py  test_openai.py  test_record.py  test_xunfei.py
xunfei_speed_transcription/: ost-fast.py  ost_fast.py  seve_file.py
