[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-game-translator"
version = "1.2.0"
authors = [
  { name="Yuhan Xia", email="yx2729@columbia.edu" },
]
description = "an openai based game audio translator"
readme = "README.md"
requires-python = ">=3.9, <3.11"
classifiers = [
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofile==3.8.5",
    "amazon-transcribe==0.6.1",
    "numpy==1.24.2",
    "openai==0.27.2",
    "pyaudio==0.2.13",
    "requests==2.27.1",
    "urllib3==1.26.15"
]

[project.optional-dependencies]
develop = [
    "coverage==7.2.2",
    "black==23.3.0",
    "flake8==6.0.0",
    "build==0.10.0",
    "twine==4.0.2",
    "bump2version==1.0.1",
    "check-manifest==0.49"
]

[project.license]
file = "LICENSE"

[project.urls]
repository = "https://github.com/Erisae/openai-game-translator"

[project.scripts]
translate = "game_translator.game_translator:main"

[options.system_packages]
portaudio = "19.7.0"