[metadata]
name = game_translator
version = 0.0.5
author = Yuhan Xia
author_email = yx2729@columbia.edu
url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = an openai based game audio translator
long_description = file: README.md

[options]
python_requires = >=3.9, <3.11
packages = find:
include_package_data = True
install_requires =
    aiofile==3.8.5
    amazon-transcribe==0.6.1
    numpy
    openai==0.27.2
    pyaudio==0.2.13
    requests==2.27.1
    sounddevice==0.4.6
    urllib3

[options.entry_points]
console_scripts = 
    translate = game_translator.game_translator:main
